--- a/mainmatter/5-Conclusion/limitations.tex
+++ b/mainmatter/5-Conclusion/limitations.tex
@@ -1,4 +1,4 @@
-\chapter{Limitations and Remaining Works }
+\chapter{Conclusion}
 
 \section{Limitations}
 This work only relates with the molecular properties of drugs and proteins to determine the best targets. The limitations to the deep learning method of protein-drug prediction in this manner are:
