--- a/mainmatter/1-Introduction/introduction.tex
+++ b/mainmatter/1-Introduction/introduction.tex
@@ -1,7 +1,7 @@
 \setcounter{page}{1}
 \chapter{Introduction}
 \section{Background}
-Treatment of diseases have mostly been associated with applying foreign medicinal components into human body. The rudimentary means of curing diseases has been growing with applied ayurbedas since the past. The chemical perspective of curing diseases slowly evolved into modern chemistry as drug facilities developed around the globe. The extensive research and documentation changed the world where people have come to trust fully in chemist's drugs to mitigate the ailments in the body. With the growing chemical intereset in the community, the need to develop better drugs and quick solutions increased even higher. With the identification of new diseases and dire need of understanding the mechanism to cure such diseases, the drug research started gaining its speed.
+Treatment of diseases are mostly associated with applying foreign medicinal components into human body. The rudimentary means of curing diseases has been growing with applied ayurbedas since the past. The chemical perspective of curing diseases slowly evolved into modern chemistry as drug facilities developed around the globe. The extensive research and documentation changed the world where people have come to trust fully in chemist's drugs to mitigate the ailments in the body. With the growing chemical intereset in the community, the need to develop better drugs and quick solutions increased even higher. With the identification of new diseases and dire need of understanding the mechanism to cure such diseases, the drug research started gaining its speed.
 
 ~\acrfull{cadd} mechanism have been developing bio-informatics ever since the "Next Industrial Revolution" possibilities started grow~\cite{Leelananda2016,Brown2017}. The interest started as Fortune magazine published the article "Designing Drugs by Computer at Merk". Experimenting with computational power and technical human resources in biomedicine, the concepts started to form scopes like \acrfull{hts} -- A technique to screen desired drugs from other drugs. \acrshort{hts} was evolving eventually to find precedence over finding novel therapeutics. The desire to increase high hit rate did grow as the traditional \acrshort{hts} led to few probable leads. As research developed on computational drug design, \acrshort{cadd} study broadened based on the computational resources required. ~\acrshort{cadd} can be classified into two general categories: Structure-based \acrshort{cadd} and Ligand-based~\acrshort{cadd}.
 
@@ -39,25 +39,25 @@ For figures, tables, equations and further information, open the file "tips.tex"
 
 % Add nomenclature at each new used nomenclature
 \fi
-
+ 
 \section{Statement of Problem}
-The simple technique of encoding the sequence information of drugs and proteins to identify if a drug will interact with the protein or not has a major issue in that while drugs encoding information can be used to make drug related predictions, the protein encodings don't properly form their representational vectors. Therefore, modeling a machine learning algorithm sometimes overfit the situation or poorly classify the problem. In this work, we explore various techniques and reproduce a regression problem for solving the prediction problem.
+The simple technique of encoding the sequence information of drugs and proteins to identify if a drug will interact with the protein or not has a major issue in that while drugs encoding information can be used to make drug related predictions, the protein encodings require additional feature vector input to properly form their representational vectors. For instance, the docking of drugs to protein structure doesn't only depend on surface area --a condition that structural representation can learn with proper algorithm --, but also with electric field and H-bond properties \cite{Wong2018}. Therefore, modeling a machine learning algorithm sometimes overfit the situation or poorly classify the problem. In this work, we explore various features integration like R2RSRV and PSSM matrix along with sequence feature set and reproduce a regression problem for solving the prediction problem.
 
 \subsection{Selection of Prediction Score}
 
-Out of the many score functions; STITCH, Davis, Metz\_Anastassiadis and KIBA scores, we choose KIBA scores to the prediction of drug and protein interaction problem. Again, KIBA scores database consists of experimental data and secondary data (from literature) of drug-target interaction. Choosing the KIBA as the output score for two protein and drug sequences, we model our machine learning algorithm by following a proper feature encoding technique.
+Out of the many score functions; STITCH, Davis, Metz\_Anastassiadis and KIBA scores, KIBA scores are used for the prediction of drug and protein interaction problem. The main reasons as found in \cite[Tang et al.]{Tang2013} being: STITCH scores don't fully explore the primary thermodynamic dissociation constants used for drug-target interaction profile and other scores are used by KIBA.  Again, KIBA scores database consists of experimental data and secondary data (from literature) of drug-target interaction. Choosing the KIBA as the output score for two protein and drug sequences, we model our machine learning algorithm for prediction of interaction.
 
 \subsection{Selection of Features}
 
-For the protein family, the focus here is with the kinase target family because of its essential roles in cellular signaling transduction for many cancers and inflammatory diseases. We concentrate on proteins dataset, specifically because their interaction is quite tricky when considered among chemical, atomic, structural and electrical nature of protein residues. Our basis for forming the matrices and vectors related to protein sequence comes from the fact that these feature sets represent specific properties related to the protein and its residues. Also, the literatures describing the feature sets characteristics and results motivates us towards the selection of these parameters: \acrshort{pssmdt}, \acrshort{edt}, \acrshort{rpt} and embedding vectors.
+For the protein family, the focus here is with the kinase target family because of its essential roles in cellular signaling transduction for many cancers and inflammatory diseases~\cite{Tang2013,Kanehisa2000}. We concentrate on proteins dataset, specifically because their interaction is quite tricky when considered among chemical, atomic, structural and electrical nature of protein residues~\cite{Mathai2019}. Our basis for forming the matrices and vectors related to protein sequence comes from the fact that these features represent specific properties related to the protein and its residues. Also, the literatures describing the feature sets characteristics and results motivates us towards the selection of these parameters: \acrshort{pssmdt}, \acrshort{edt}, \acrshort{rpt} and embedding vectors.
 
 
 \section{Objectives}
 The objectives of the research are:
 \begin{itemize}
     \setlength\parindent{36pt}
-    \item To determine the efficient different transformation matrices related to protein.
-    \item To determine the right machine learning algorithm for modeling the protein-drug interactions.
+    \item To determine the effective feature matrices related to protein.
+    \item To determine the right machine learning algorithm for predicting the protein-drug interactions.
 \end{itemize}
 
 % \section{Scope of Work}
